--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -20,7 +21,7 @@
     "mongoose": "^8.15.1",
     "node-cron": "^4.1.0",
     "nodemailer": "^7.0.3",
-    "puppeteer": "^24.10.0"
+    "puppeteer-core": "^24.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
